// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > Snapshot > matches snapshot for boxed variant 1`] = `
<div
  class="w-full"
>
  <div
    aria-orientation="horizontal"
    class="flex border rounded-lg overflow-hidden flex-row border-base border-b-0"
    role="tablist"
  >
    <button
      aria-controls="_r_t_-panel-tab1"
      aria-selected="true"
      class="relative inline-flex items-center justify-center whitespace-nowrap font-medium transition-all duration-200 cursor-pointer select-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary disabled:opacity-50 disabled:cursor-not-allowed text-secondary hover:bg-surface hover:text-base aria-selected:bg-surface aria-selected:text-base px-md py-sm text-md border-b-2 -mb-px aria-selected:border-primary border-r border-base last:border-r-0"
      id="_r_t_-tab-tab1"
      role="tab"
      tabindex="0"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="_r_t_-panel-tab2"
      aria-selected="false"
      class="relative inline-flex items-center justify-center whitespace-nowrap font-medium transition-all duration-200 cursor-pointer select-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary disabled:opacity-50 disabled:cursor-not-allowed text-secondary hover:bg-surface hover:text-base aria-selected:bg-surface aria-selected:text-base px-md py-sm text-md border-b-2 -mb-px aria-selected:border-primary border-r border-base last:border-r-0"
      id="_r_t_-tab-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-controls="_r_t_-panel-tab3"
      aria-selected="false"
      class="relative inline-flex items-center justify-center whitespace-nowrap font-medium transition-all duration-200 cursor-pointer select-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary disabled:opacity-50 disabled:cursor-not-allowed text-secondary hover:bg-surface hover:text-base aria-selected:bg-surface aria-selected:text-base px-md py-sm text-md border-b-2 -mb-px aria-selected:border-primary border-r border-base last:border-r-0"
      disabled=""
      id="_r_t_-tab-tab3"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    class="mt-md"
  >
    <div
      aria-labelledby="_r_t_-tab-tab1"
      class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary rounded-sm"
      id="_r_t_-panel-tab1"
      role="tabpanel"
      tabindex="0"
    >
      <div>
        Content 1
      </div>
    </div>
    <div
      aria-labelledby="_r_t_-tab-tab2"
      class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary rounded-sm"
      hidden=""
      id="_r_t_-panel-tab2"
      role="tabpanel"
      tabindex="0"
    >
      <div>
        Content 2
      </div>
    </div>
    <div
      aria-labelledby="_r_t_-tab-tab3"
      class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary rounded-sm"
      hidden=""
      id="_r_t_-panel-tab3"
      role="tabpanel"
      tabindex="0"
    >
      <div>
        Content 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot > matches snapshot for default tabs 1`] = `
<div
  class="w-full"
>
  <div
    aria-orientation="horizontal"
    class="flex flex-row border-b border-base"
    role="tablist"
  >
    <button
      aria-controls="_r_r_-panel-tab1"
      aria-selected="true"
      class="relative inline-flex items-center justify-center whitespace-nowrap font-medium transition-all duration-200 cursor-pointer select-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary disabled:opacity-50 disabled:cursor-not-allowed border-transparent hover:border-base text-secondary hover:text-base aria-selected:text-base px-md py-sm text-md border-b-2 -mb-px aria-selected:border-primary"
      id="_r_r_-tab-tab1"
      role="tab"
      tabindex="0"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="_r_r_-panel-tab2"
      aria-selected="false"
      class="relative inline-flex items-center justify-center whitespace-nowrap font-medium transition-all duration-200 cursor-pointer select-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary disabled:opacity-50 disabled:cursor-not-allowed border-transparent hover:border-base text-secondary hover:text-base aria-selected:text-base px-md py-sm text-md border-b-2 -mb-px aria-selected:border-primary"
      id="_r_r_-tab-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-controls="_r_r_-panel-tab3"
      aria-selected="false"
      class="relative inline-flex items-center justify-center whitespace-nowrap font-medium transition-all duration-200 cursor-pointer select-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary disabled:opacity-50 disabled:cursor-not-allowed border-transparent hover:border-base text-secondary hover:text-base aria-selected:text-base px-md py-sm text-md border-b-2 -mb-px aria-selected:border-primary"
      disabled=""
      id="_r_r_-tab-tab3"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    class="mt-md"
  >
    <div
      aria-labelledby="_r_r_-tab-tab1"
      class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary rounded-sm"
      id="_r_r_-panel-tab1"
      role="tabpanel"
      tabindex="0"
    >
      <div>
        Content 1
      </div>
    </div>
    <div
      aria-labelledby="_r_r_-tab-tab2"
      class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary rounded-sm"
      hidden=""
      id="_r_r_-panel-tab2"
      role="tabpanel"
      tabindex="0"
    >
      <div>
        Content 2
      </div>
    </div>
    <div
      aria-labelledby="_r_r_-tab-tab3"
      class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary rounded-sm"
      hidden=""
      id="_r_r_-panel-tab3"
      role="tabpanel"
      tabindex="0"
    >
      <div>
        Content 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot > matches snapshot for pill variant 1`] = `
<div
  class="w-full"
>
  <div
    aria-orientation="horizontal"
    class="flex gap-xs bg-muted p-xs rounded-lg flex-row border-base border-b-0"
    role="tablist"
  >
    <button
      aria-controls="_r_s_-panel-tab1"
      aria-selected="true"
      class="relative inline-flex items-center justify-center whitespace-nowrap font-medium transition-all duration-200 cursor-pointer select-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary disabled:opacity-50 disabled:cursor-not-allowed rounded-md text-secondary hover:text-base hover:bg-surface aria-selected:bg-surface aria-selected:text-base aria-selected:shadow-sm px-md py-sm text-md -mb-px aria-selected:border-primary border-0"
      id="_r_s_-tab-tab1"
      role="tab"
      tabindex="0"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="_r_s_-panel-tab2"
      aria-selected="false"
      class="relative inline-flex items-center justify-center whitespace-nowrap font-medium transition-all duration-200 cursor-pointer select-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary disabled:opacity-50 disabled:cursor-not-allowed rounded-md text-secondary hover:text-base hover:bg-surface aria-selected:bg-surface aria-selected:text-base aria-selected:shadow-sm px-md py-sm text-md -mb-px aria-selected:border-primary border-0"
      id="_r_s_-tab-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-controls="_r_s_-panel-tab3"
      aria-selected="false"
      class="relative inline-flex items-center justify-center whitespace-nowrap font-medium transition-all duration-200 cursor-pointer select-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary disabled:opacity-50 disabled:cursor-not-allowed rounded-md text-secondary hover:text-base hover:bg-surface aria-selected:bg-surface aria-selected:text-base aria-selected:shadow-sm px-md py-sm text-md -mb-px aria-selected:border-primary border-0"
      disabled=""
      id="_r_s_-tab-tab3"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    class="mt-md"
  >
    <div
      aria-labelledby="_r_s_-tab-tab1"
      class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary rounded-sm"
      id="_r_s_-panel-tab1"
      role="tabpanel"
      tabindex="0"
    >
      <div>
        Content 1
      </div>
    </div>
    <div
      aria-labelledby="_r_s_-tab-tab2"
      class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary rounded-sm"
      hidden=""
      id="_r_s_-panel-tab2"
      role="tabpanel"
      tabindex="0"
    >
      <div>
        Content 2
      </div>
    </div>
    <div
      aria-labelledby="_r_s_-tab-tab3"
      class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary rounded-sm"
      hidden=""
      id="_r_s_-panel-tab3"
      role="tabpanel"
      tabindex="0"
    >
      <div>
        Content 3
      </div>
    </div>
  </div>
</div>
`;
